<resources>
    <string name="app_name">Arabot++</string>
    <string name="channel_name">Arabot++ Notifications</string>
    <string name="channel_description">Notifications of Arabot++ App</string>
    <string name="action_clearlogs">Reset Log</string>
    <string name="blacklist_room">Room (Separate by lines)</string>
    <string name="blacklist_name">Name (Separate by lines)</string>
    <string name="blacklist_apply">Apply end exit</string>
    <string name="noti_read_permission">Notification Access</string>
    <string name="no_noti_read_permission">No Notification Access!</string>
    <string name="settings_kakaotalk_location">Messenger</string>
    <string name="settings_kakaotalk_location_normal">Kakaotalk / Samsung Dual Messenger</string>
    <string name="settings_kakaotalk_location_parallel">Parallel Space (Not works yet)</string>
    <string name="settings_compatibility">Compatibility</string>
    <string name="settings_compatibility_jellbreak">JellBreak Bot Compatibility (Database etc…)</string>
    <string name="settings_manage_blacklist">Manage Blacklist</string>
    <string name="settings_others">Others</string>
    <string name="settings_others_offOnRuntimeError">Automatically turn off bot when runtime error (Recommended)</string>
    <string name="settings_others_onDeleteBackup">Backup database when DataBase.removeDataBase is called</string>
    <string name="settings_specificLog">Specific Log</string>
    <string name="settings_snackbar_applied">Some settings will be applied at next compile</string>
    <string name="settings_resetSession">When re-compile, reset debug room</string>
    <string name="settings_showAd">See ad to help developer</string>
    <string name="snackbar_script_saved">Saved</string>
    <string name="snackbar_script_save_failed">Saving Failed</string>
    <string name="snackbar_compiling">Compiling…</string>
    <string name="snackbar_compiled">Compiled</string>
    <string name="snackbar_compileStart">Start Compile</string>
    <string name="chk_groupchat">Group Chat</string>

    <string name="wait_for_ad">Please wait for a moment to load ad…</string>
    <string name="thanks_for_helping">Thanks for helping!</string>
    <string name="btn_help">Help</string>
    <string name="help">(English Help is outdated. It would be updated later)
    \nMake your own Kakaotalk Bot!\n
    Before you start, you should know how to code in JavaScript\n
    You can reply the room by calling replier.reply(String) in response function\n\n
    Api.getContext() : get this application\'s context\n
    Api.reload() or Api.compile() : re-compile all the script\n
    Api.reload(\"Script.js\") or Api.compile(\"Script.js\") : re-compile the script\n
    Api.prepare(\"Script.js\") : compile only if the script has never been compiled. throws error on compile failure, returns 0 when the script doesn\'t exists, returns 1 on compile success, and returns 2 if the script has ever been compiled.\n
    Api.off() : turn off your bot\n
    Api.replyRoom(room,message,hideToast=false) : send message to specific room\n
    Api.canReply(room) : check if bot can reply to room\n
    Utils.getWebText(url:String) : get website\'s HTML\n
        Utils.parse(url:String) : return html parse data as Jsoup Document\n\n
    Log.error(string,viewToast=false) : add error log to log screen (if viewToast is true, it makes Toast popup)\n
    Log.info(string) : add info to log screen\n
    Log.debug(string) : add debug log to log screen\n\n
    AppData.putInt/Boolean/String(String key,int/boolean/String data) : save data to appdata\n
    AppData.getInt/Boolean/String() : load data from appdata\n
    AppData.clear() : clear the appdata\n
    AppData.remove(String key) : remove data from appdata\n\n
    DataBase.setDataBase(String fileName,String content) : overwrite data to file\n
    DataBase.getDataBase(String fileName) : get data from file\n
    DataBase.removeDataBase(String fileName) : delete file\n
    DataBase.appendDataBase(String fileName,String content) : append data to file\n\n
    Bridge.getScopeOf(String scriptName) : Gets the script\'s scope.\n
    Bridge.isAllowed(String scriptName) : returns if the script is allowed to be accessed\n
    Device : contains device information.\n
          .getBuild()\n
          .getAndroidVersionCode()\n
          .getAndroidVersionName()\n
          .getPhoneBrand()\n
          .getPhoneModel()\n
          .isCharging()\n
          .getPlugType()\n
          .getBatteryLevel()\n
          .getBatteryHealth()\n
          .getBatteryTemperature()\n
          .getBatteryVoltage()\n
          .getBatteryStatus()\n
          .getBatteryIntent()\n

        FileStream : Provides file read/write.\n
          .read(path): read file\n
          .write(path,content): write file\n
    \n
    \n
    Rhino, Mozilla\'s JavaScript Engine, is used in this application.\n
    License: https://www.mozilla.org/en-US/MPL/2.0</string>
    <string name="settings_kakaotalk_location_facebookMessenger">Facebook Messenger</string>
    <string name="settings_kakaotalk_location_Line">Line</string>
    <string name="script_autoloaded">Applied changes to editor</string>
    <string name="tutorial_openAnotherApp">Long press to open in another app</string>
    <string name="tutorial_saveAndCompile">Long press to Save and Compile</string>
    <string name="alert_newScript_title">New Script</string>
    <string name="alert_newScript_message">Input file name:</string>
    <string name="already_compiling">Script is already compiling.</string>
    <string name="compile_all">Compile All</string>
    <string name="off_all">Turn off All</string>
    <string name="alert_set_noti_access_message">To go to settings, tap OK button</string>
    <string name="settings_ignore_api_off">Ignore Api.off()</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="settings_allow_bridge">Allow Bridge to access this script\'s scope</string>
    <string name="settings_optimization">Optimization (Interpreter=0)</string>
    <string name="public_settings_jsouptimeout">HTML Parsing Timeout(ms)</string>
    <string name="public_settings_autocompile">Automatically compile scripts when you get first message but no script was compiled</string>
    <string name="public_settings_customPackages">Package names to read Notification (Separate with lines)</string>
    <string name="internal_error">An Internal Error has occurred. Please send log screen image to burningpig9592@gmail.com.</string>
    <string name="action_open_cafe">MessengerBot Community</string>
    <string name="public_settings">Public Settings</string>
    <string name="please_compile_first">Please compile first</string>
    <string name="switch_redundant">Since this script doesn\'t include response function, so turning on this is redundant.</string>
    <string name="bot_activate">Activate</string>
    <string name="unify_params">Use unified parameters. Not recommended for beginners of JavaScript</string>
    <string name="delete_script">Delete Script</string>
    <string name="alert_delete_script">Are you sure?</string>
    <string name="alert_delete_script_hint">Please type the name of this script.</string>
    <string name="showAll_adjustScreen">Adjust to Screen</string>
    <string name="goto_github">View On Github</string>
    <string name="public_settings_timeout_overflow">Value must be in 0~2147483647</string>
    <string name="saved">Saved</string>
    <string name="func_oncreate_error">There is no function onCreate()!</string>
    <string name="func_onstop_error">There is no function onStop()!</string>
    <string name="func_onresume_error">There is no function onResume()!</string>
    <string name="func_onpause_error">There is no function onPause()!</string>
    <string name="messege_more">more…</string>
    <string name="quit">Quit</string>
    <string name="action_help">Help</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="sandbox">Sandbox</string>
    <string name="scriptsettings">Script Configuration</string>
    <string name="log">Log</string>
    <string name="debugroom">Debug Room</string>
    <string name="scriptactivity">Script Activity</string>
    <string name="scripteditor">Script Editor</string>
    <string name="blacklist">Manage Blacklist</string>
    <string name="application">Application</string>
    <string name="custom_packages">Custom Packages</string>
    <string name="script">Script</string>
    <string name="badscriptname">Script name is incorrect!</string>
    <string name="arabot_logo_name">아라봇 로고</string>
    <string name="ms">(ms)</string>
    <string name="send">SEND</string>
    <string name="room" translatable="false">room</string>
    <string name="sender" translatable="false">sender</string>
    <string name="line">LINE</string>
    <string name="telegram">Telegram</string>
    <string name="motto">C makes it easy to shoot yourself in the foot; C++ makes it harder, but when you do it blows your whole leg off. ― Bjarne Stroustrup</string>
    <string name="enter_message">Enter messege</string>
    <string name="reload_script">스크립트 리로드</string>
    <string name="editscript">Edit Script</string>
    <string name="debug_room_1">DEBUG_ROOM</string>
    <string name="debug_sender">DEBUG_SENDER</string>

</resources>
