<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_kakaotalk_location"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linear_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <CheckBox
                    android:id="@+id/chk_useNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/settings_kakaotalk_location_normal"
                    android:textAlignment="viewStart" />

                <CheckBox
                    android:id="@+id/chk_useFacebookMessenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_kakaotalk_location_facebookMessenger" />

                <CheckBox
                    android:id="@+id/chk_useLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="LINE" />

                <CheckBox
                    android:id="@+id/chk_useParallelSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/settings_kakaotalk_location_parallel"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/chk_useTelegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Telegram"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_compatibility"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chk_JBBotCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/settings_compatibility_jellbreak" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_others"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chk_OffOnRuntimeError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:checked="true"
                android:text="@string/settings_others_offOnRuntimeError" />

            <CheckBox
                android:id="@+id/chk_OnDeleteBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:checked="true"
                android:text="@string/settings_others_onDeleteBackup" />

            <CheckBox
                android:id="@+id/chk_resetSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/settings_resetSession" />

            <CheckBox
                android:id="@+id/chk_specificLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/settings_specificLog" />

            <CheckBox
                android:id="@+id/chk_ignoreApiOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/settings_ignore_api_off" />

            <CheckBox
                android:id="@+id/chk_allowBridge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:checked="true"
                android:text="@string/settings_allow_bridge" />

            <CheckBox
                android:id="@+id/chk_useUnifiedParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/unify_params" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_optimization"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/optimization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="0" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_blacklistMng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/settings_manage_blacklist"
                android:textColor="@color/buttonText" />

            <Button
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/btn_help"
                android:textColor="@color/buttonText" />

            <Button
                android:id="@+id/btn_showAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/settings_showAd"
                android:textColor="@color/buttonText" />

            <Button
                android:id="@+id/btn_deleteScript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/delete_script"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_settings_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>