<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/script"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/public_settings_jsouptimeout" />

                <EditText
                    android:id="@+id/jsouptimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="(ms)"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:paddingTop="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/application"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
            <CheckBox
                android:id="@+id/chk_resetSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/settings_resetSession" />
            <CheckBox
                android:id="@+id/chk_autoCompile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/public_settings_autocompile" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/custom_packages"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_customPackages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/public_settings_customPackages"
                android:inputType="textMultiLine|textPersonName"
                android:singleLine="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_public_settings_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_done_white_24dp" />

</android.support.design.widget.CoordinatorLayout>